--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DG Lytix</title>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+  
 
 <div class="container">
    <div class="box">
@@ -12,3 +22,6 @@
   <p>Maintenance screen for DG Lytix</a></p>
   </div>
 </div>
+
+</body>
+</html>
