--- a/404.html
+++ b/404.html
@@ -3,15 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DG Lytix</title>
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <title>404- Page not found</title>
+  <style>*{
+    transition: all 0.6s;
+}
+
+html {
+    height: 100%;
+}
+
+body{
+    font-family: 'Lato', sans-serif;
+    color: #888;
+    margin: 0;
+}
+
+#main{
+    display: table;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+}
+
+.fof{
+	  display: table-cell;
+	  vertical-align: middle;
+}
+
+.fof h1{
+	  font-size: 50px;
+	  display: inline-block;
+	  padding-right: 12px;
+	  animation: type .5s alternate infinite;
+}
+
+@keyframes type{
+	  from{box-shadow: inset -3px 0px 0px #888;}
+	  to{box-shadow: inset -3px 0px 0px transparent;}
+}</style>
 </head>
 <body>
-  
-You are at the wrong place!! <br>
-BYE BYE
-</div>
+  <div id="main">
+    <div class="fof">
+          <h1>404 Page not found</h1>
+          <p style="margin-top: -5vh;">Click anywhere to goto Homepage</p>
 
+    </div>
+</div>
+<script>
+ body= document.getElementsByTagName("body")[0];
+body.addEventListener("click",()=>{
+  window.location.href="index.html"
+})
+ 
+</script>
 </body>
 </html>
