--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@ Saroj Gautam, a skilled video editor specializes in transforming raw footage int
                           >
                         </h3>
                         <a href="#" class="more "></a>
-                        <a href="blogs.html" class="link"></a>
+                        <a href="Blogs/" class="link"></a>
                       </div>
                     </div>
                   </article>
