--- a/404.html
+++ b/404.html
@@ -51,6 +51,12 @@ body{
     </div>
 </div>
 <script>
+	window.onload = function() {
+    if(window.location.href=="https://dglytix.com/blogs"){
+	    console.log("done")
+	    window.location.href="https://dglytix.com/blogs/"
+    }
+}
  body= document.getElementsByTagName("body")[0];
 body.addEventListener("click",()=>{
   window.location.href="index.html"
