--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@ body{
 }
  body= document.getElementsByTagName("body")[0];
 body.addEventListener("click",()=>{
-  window.location.href="dglytix.com"
+  window.location.href="/"
 })
  
 </script>
