--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   />
 
   <head>
-    <title>DG Lytix</title>
+   <title>Web Development & Graphic Design Services | DG Lytix</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#5F16EBff" />
+   <meta name="description" content="DG Lytix: Professional web development services tailored to grow your business. We create SEO-friendly, responsive websites and custom solutions. Get a free consultation now!">
+    <meta name="keywords" content="graphic design, branding, logo design, creative designs, DG Lytix, web development">
+<meta property="og:title" content="Discover Stunning Graphic Designs by DG Lytix on Pinterest">
+<meta property="og:description" content="Explore our creative portfolio on Pinterest, featuring custom logos, branding, and marketing visuals. Follow us for inspiration!">
+<meta property="og:url" content="https://www.pinterest.com/dglytix/">
+<meta property="og:image" content="https://www.pinterest.com/pin/970736894677226315/">
+
     <link rel="stylesheet" href="assets/css/mystyle.css" />
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" />
