--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:image" content="https://www.pinterest.com/pin/970736894677226315/">
 
     <link rel="stylesheet" href="assets/css/mystyle.css" />
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+<link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" /><link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" /><link rel="shortcut icon" href="assets/images/favicon/favicon.ico" /><link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" /><link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link href="style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
