--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div
                       class="image pr__image__cover pr__ratio__portrait"
                       data-src="assets/images/gaurabh.jpg"
-                      data-uk-img=""
+                      data-uk-img="" alt="Gaurabh Sapkota , co-founder at DG Lytix"
                     ></div>
                   </div>
                 </div>
@@ -570,7 +570,7 @@
                     <div
                       class="image pr__image__cover pr__ratio__portrait"
                       data-src="assets/images/bikal.jpg"
-                      data-uk-img=""
+                      data-uk-img="" alt="Bikal Niraula, the co-founder at DG Lytix folding hands , smiling , with the background of a tree"
                     ></div>
                   </div>
                 </div>
