--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                       <div class="outer">
                         <div class="inner">
                           <p class="description">
-                            Bikal Niraula, a skilled web developer specializes in crafting efficient, scalable websites with exclusive programming expertise. Known for clean, optimized code, Bikal combines technical proficiency with creative problem-solving to deliver high-quality web solutions. As a co-founder, his problem-solving skills play a crucial role in driving the success of the team and projects.
+                            Bikal Niraula, a skilled web developer specializes in crafting efficient, scalable websites with exclusive programming expertise. Known for clean, optimized code, Bikal combines technical proficiency with creative problem-solving to deliver high-quality web solutions. As a co-founder of DG Lytix, his problem-solving skills play a crucial role in driving the success of the team and projects.
                           </p>
                           <h4 class="client">Bikal Niraula, Co-founder</h4>
                           <p class="description">bikalniraulaofficial@gmail.com<br>+9779702046179</p>
