--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:description" content="Explore our creative portfolio on Pinterest, featuring custom logos, branding, and marketing visuals. Follow us for inspiration!">
 <meta property="og:url" content="https://www.pinterest.com/dglytix/">
 <meta property="og:image" content="https://www.pinterest.com/pin/970736894677226315/">
-
+<meta name="p:domain_verify" content="89e3d8d5412ca6a2f531aa7a25fe9637"/>
     <link rel="stylesheet" href="assets/css/mystyle.css" />
 <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" /><link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" /><link rel="shortcut icon" href="assets/images/favicon/favicon.ico" /><link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" /><link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link href="style.css" rel="stylesheet" />
