--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@
                     <div class="outer">
                       <div
                         class="image pr__image__cover pr__ratio__square"
-                        data-src="assets/images/works/02.png"
+                        data-src="assets/images/works/tea.jpeg"
                         data-uk-img=""
                       ></div>
                       <div class="inner">
-                        <h3 class="title uk-h4">CBM College</h3>
-                        <p class="category">Website</p>
-                        <a href="https://cbm.edu.np" target=”_blank” class="link uk-position-cover"></a>
+                        <h3 class="title uk-h4">Chaha Tea</h3>
+                        <p class="category">Design</p>
+                        <a href="https://pin.it/2XcJ2sQH1" target=”_blank” class="link uk-position-cover"></a>
                       </div>
                     </div>
                   </div>
