--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         class="image pr__image__cover pr__ratio__square"
                         data-src="assets/images/works/tea.jpeg"
                         data-uk-img=""
-                      style="background-image: url(&quot;https://dglytix.com/assets/images/works/03.png&quot;);"
+                      style="background-image: url(&quot;https://dglytix.com/assets/images/works/tea.jpeg&quot;);"
                       ></div>
                       <div class="inner">
                         <h3 class="title uk-h4">Chaha Tea</h3>
