Revise DGLytix description to highlight mission
Updated the content to focus on DGLytix's mission to empower local vendors and bridge the digital divide in Nepal.

--- a/index.html
+++ b/index.html
@@ -467,14 +467,15 @@
                       <div class="inner">
                         <h3 class="title uk-h5">DG Lytix</h3>
                         <p class="descriptions description" style="margin-top: 3vh;">
-                          The innovative heart of Dillibazar, Charkhal, houses DG Lytix, one such startup that moves forward with innovation at the forefront, powered by the passion and determination of a young team to create their influence in the tech industry. Founded by ambitious teenagers, DG Lytix gained notice from media due to their fresh approach towards digital solutions and unyielding resolve for excellence. Our mission is simple yet powerful: redefine possibilities in technology and empower both businesses and individuals alike with tools that make a difference
+                         In Nepal, many local vendors continue to operate through traditional methods, without any digital presence. They lack social media visibility, websites, and access to online marketplaces, even those who sell Nepal’s most authentic cultural products.
+
                           </p>
                           <p class=" description descriptions" style="margin-top: 3vh;">
-                          From software development and digital strategy to creative solutions, the knowledge that DG Lytix has holds fast to turning complex issues into opportunities for growth and innovation. We take pride in living the startup culture of creativity, collaboration, and resilience that pushes us further in pursuit of outstanding solutions. This is just the beginning, as we are excited to press on, driven by an all-consuming passion for progress and a commitment to excellence.
+                         To address this gap, DGLytix was founded. Our mission is to empower small vendors with simple, accessible digital tools. We help them build their social media presence, bring their products online, and connect them with a wider customer base.
+
                           </p>
                           <p class="descriptions description" style="margin-top: 3vh;">
-                          Come join us at DG Lytix and continue innovating, inspiring, and shaping from scratch the face of technology as it stands today. Together, we are building solutions; we are building up the future.
-                          
+                       DGLytix aims to bridge the digital divide and support Nepal’s local businesses in growing sustainably in the digital age. It exists to bridge the gap and make sure local businesses aren’t left behind in the digital world.
                         </p>
                       </div>
                     </div>
