Change 'About us' heading to 'Our Mission'

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                   <div class="inner uk-grid" data-uk-grid="">
                     <div class="left uk-width-expand">
                       <hr class="line pr__hr__secondary" />
-                      <h2 class="title uk-h1">About us.</h2>
+                      <h2 class="title uk-h1">Our Mission.</h2>
                       <span class="subtitle pr__heading__secondary"
                         >Who we are</span
                       >
